JumpScript/tests/baselines/reference/superCallFromFunction1.errors.txt
tests/cases/compiler/superCallFromFunction1.jump(2,5): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== tests/cases/compiler/superCallFromFunction1.jump (1 errors) ====
    function foo() {
        super(value => String(value));
        ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
    }